--- a/src/game.scss
+++ b/src/game.scss
@@ -1,7 +1,31 @@
 body {
   background: #011627;
-  color: #7e57c2;
+  color: #d6deeb;
   text-align: center;
+  font-family: "Helvetica Neue", sans-serif;
+}
+
+h1 {
+  font-size: 54px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  > * {
+    margin: 0 10px 0 0;
+  }
+
+  .player-symbol-O {
+    color: #addb67;
+  }
+  .player-symbol-X {
+    color: #7e57c2;
+  }
+}
+
+.player-symbol {
+  font-size: 1.5em;
+  font-family: "Helvetica Neue", sans-serif;
 }
 
 .board {
@@ -35,5 +59,8 @@ body {
 
   .symbol-O {
     color: #addb67;
+  }
+  .symbol-X {
+    color: #7e57c2;
   }
 }
