--- a/src/game.scss
+++ b/src/game.scss
@@ -64,3 +64,11 @@ h1 {
     color: #7e57c2;
   }
 }
+
+.error {
+  margin: 20px auto;
+  max-width: 800px;
+  padding: 10px;
+  background: #ab0300f2;
+  border: #ef5350 solid 1px;
+}
